# ai_doc_processor

./: .gitignore  Makefile  PROJECT_SUMMARY.md  README.md  documents.db  start_app.sh  start_backend.sh  start_frontend.sh
.github/workflows/: README.md  ci.yml  code-quality.yml  cross-platform.yml  full-test-suite.yml
backend/: Pipfile  alembic.ini  documents.db  main.py  main_old.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: checklist.py  files.py  questions.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  database.py
backend/app/schemas/: schemas.py
backend/app/services/: __init__.py  ai_factory.py  ai_service.py  claude_file_service.py  claude_service.py  file_service.py  mock_ai_service.py  question_service.py
backend/tests/: conftest.py  test_chat.py  test_checklist.py  test_debug.py  test_file_upload.py  test_integration.py  test_questions.py
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChecklistProcessor.tsx  FileUpload.tsx  QuestionManager.tsx
frontend/lib/: api.ts
frontend/types/: index.ts
